hphp/hack/test/typecheck/generics_restrictions/static_property_generic_bad.php.like_types.exp
File "static_property_generic_bad.php", line 5, characters 18-18:
A generic parameter cannot be used in the type of a static property (Typing[4279])
File "static_property_generic_bad.php", line 5, characters 17-18:
This is where the type of the static property was declared
File "static_property_generic_bad.php", line 4, characters 7-7:
This is the class containing the static property
File "static_property_generic_bad.php", line 7, characters 21-21:
A generic parameter cannot be used in the type of a static property (Typing[4279])
File "static_property_generic_bad.php", line 7, characters 18-22:
This is where the type of the static property was declared
File "static_property_generic_bad.php", line 4, characters 7-7:
This is the class containing the static property
File "static_property_generic_bad.php", line 6, characters 21-21:
A generic parameter cannot be used in the type of a static property (Typing[4279])
File "static_property_generic_bad.php", line 6, characters 17-22:
This is where the type of the static property was declared
File "static_property_generic_bad.php", line 4, characters 7-7:
This is the class containing the static property
File "static_property_generic_bad.php", line 11, characters 22-23:
A generic parameter cannot be used in the type of a static property (Typing[4279])
File "static_property_generic_bad.php", line 11, characters 18-30:
This is where the type of the static property was declared
File "static_property_generic_bad.php", line 10, characters 7-20:
This is the class containing the static property
File "static_property_generic_bad.php", line 13, characters 5-31:
Invalid assignment (Typing[4110])
File "static_property_generic_bad.php", line 10, characters 38-41:
Expected TVal
File "static_property_generic_bad.php", line 11, characters 26-29:
  via this generic TVal
File "static_property_generic_bad.php", line 12, characters 34-37:
But got dynamic because it is an unenforceable type
File "static_property_generic_bad.php", line 16, characters 12-31:
Invalid index type for this HH\Map (Typing[4324])
File "static_property_generic_bad.php", line 10, characters 22-23:
This is a value of generic type Tk
File "static_property_generic_bad.php", line 11, characters 22-23:
  via this generic Tk
File "static_property_generic_bad.php", line 15, characters 24-25:
It is incompatible with a dynamic value or a value of generic type Tk because it is an unenforceable type
